<resources>
    <string name="network_device">Select Network Device</string>
    <string name="app_name">Vehicle Controller</string>
    <string name="select_device_paired">Paired Devices</string>
    <string name="select_device_discovered">Discovered Devices</string>
    <string name="select_device_refresh">Refresh Lists</string>
    <string name="scan">Scan</string>
    <string name="left_control">Left Control</string>
    <string name="right_control">Right Control</string>
    <string name="Disconnect">Disconnect</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="connect">Connect</string>
    <string name="enterIP">Enter IP Address Here</string>
    <string name="imageDescription">Car Image</string>
    <string name="extend_arm">Extend Arm</string>
    <string name="retract_arm">Retract Arm</string>
</resources>
