<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectDeviceActivity">

    <TextView
        android:id="@+id/select_device_paired_heading"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/select_device_paired"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ListView
        android:id="@+id/select_device_paired_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/select_device_discovery_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_device_paired_heading"
        />

    <TextView
        android:id="@+id/select_device_discovery_heading"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/select_device_discovered"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        app:layout_constraintTop_toBottomOf="@id/select_device_paired_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_device_discovery_list"
        />

    <ListView
        android:id="@+id/select_device_discovery_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/select_device_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_device_discovery_heading"
        />

    <Button
        android:id="@+id/select_device_scan"
        android:text="@string/scan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/select_device_refresh"
        android:text="@string/select_device_refresh"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>