<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/extend_arm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extend_arm"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retract_arm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retract_arm"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/extend_arm_button" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/left_joystick"
        android:layout_width="200dp"
        android:layout_height="172dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="48dp"
        app:JV_backgroundColor="#FFFFFF"
        app:JV_borderColor="#000000"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#000000"
        app:JV_buttonSizeRatio="30%"
        app:JV_fixedCenter="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="510dp"
        android:background="@mipmap/darkuparrow"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toTopOf="@id/left_joystick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="225dp"
        android:layout_marginRight="410dp"
        android:background="@mipmap/darkrightarrow"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toTopOf="@id/left_joystick"
        app:layout_constraintLeft_toRightOf="@id/left_joystick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="510dp"
        android:background="@mipmap/darkdownarrowrevised"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/left_joystick" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="225dp"
        android:background="@mipmap/darkleftarrow"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toTopOf="@id/left_joystick"
        app:layout_constraintRight_toLeftOf="@id/left_joystick"
        app:layout_constraintTop_toTopOf="parent" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/right_joystick"
        android:layout_width="200dp"
        android:layout_height="172dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:JV_backgroundColor="#FFFFFF"
        app:JV_borderColor="#000000"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#000000"
        app:JV_buttonSizeRatio="30%"
        app:JV_fixedCenter="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="145dp"
        android:background="@mipmap/darkuparrow"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toTopOf="@id/right_joystick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="225dp"
        android:layout_marginRight="40dp"
        android:background="@mipmap/darkrightarrow"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toTopOf="@id/right_joystick"
        app:layout_constraintLeft_toRightOf="@id/right_joystick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="145dp"
        android:background="@mipmap/darkdownarrowrevised"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/right_joystick" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="225dp"
        android:background="@mipmap/darkleftarrow"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toTopOf="@id/right_joystick"
        app:layout_constraintRight_toLeftOf="@id/right_joystick"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/control_disconnect"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginTop="52dp"
        android:text="@string/Disconnect"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_joystick"
        tools:ignore="SmallSp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>